name:                bench
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base
  default-language: Haskell2010

library bench-keys
  hs-source-dirs: keys
  build-depends: base
  exposed-modules: Int String

test-suite space
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -O2
  main-is: Space.hs
  mixins:
    unpacked-containers (Set as Int.Set) requires (Key as Int),
    unpacked-containers (Set as String.Set) requires (Key as String)
  build-depends: base
               , bench-keys
               , weigh
               , deepseq
               , containers
               , unordered-containers
               , unpacked-containers
               , packed-dawg
               , bloomfilter
               , random

benchmark time
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Time.hs
  mixins:
    unpacked-containers (Set as Int.Set) requires (Key as Int),
    unpacked-containers (Set as String.Set) requires (Key as String)
  build-depends:     base
                   , bench-keys
                   , bytestring
                   , ghc-prim
                   , criterion
                   , deepseq
                   , bloomfilter
                   , containers
                   , unordered-containers
                   , unpacked-containers
                   , packed-dawg
                   , random
                   , directory

executable report
  default-language: Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Report.hs
  build-depends:     base
                   , bytestring
                   , directory
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , csv
